[project]
name = "dnamic-toolkit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tomhepz", email = "9285131+tomhepz@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "diatomic-py",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "scipy<1.17",
]

[project.scripts]
your-command = "dnamic_toolkit.cli:main"


[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyqt6>=6.10.1",
    "pytest>=9.0.2",
]

[tool.uv.sources]
diatomic-py = { git = "https://github.com/durham-qlm/diatomic-py.git", branch = "devel" }
